--- a/package.json
+++ b/package.json
@@ -10,8 +10,11 @@
     "@testing-library/user-event": "^12.6.0",
     "axios": "^0.21.1",
     "react": "^17.0.1",
+    "react-autosuggest": "^10.1.0",
     "react-dom": "^17.0.1",
     "react-scripts": "4.0.1",
+    "react-tag-autocomplete": "^6.1.0",
+    "react-tag-component": "^1.3.0",
     "react-tagsinput": "^3.19.0",
     "web-vitals": "^0.2.4"
   },
